# neuromorphic-ai-paradigm

./: .gitignore  LICENSE  README.md
data/raw/: spikes.csv  weights.csv
go-orchestrator/: go.mod  main.go
python-analysis/: analysis_utils.py  plot_spikes.py  plot_weights.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs  main.rs  neuron.rs  simulation.rs  spike.rs  stdp.rs  synapse.rs
